Add note about (temporary) removal of the testsuite from gcc releases.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -42,6 +42,7 @@ comp.std.c++ FAQ</a>.
 
   <li><a href="#testsuite">Testsuite problems</a>
   <ol>
+    <li><a href="#testsuite">Why is there no testsuite in gcc-2.95</a>
     <li><a href="#dejagnu">Unable to run the testsuite</a>
     <li><a href="#testoptions">How do I pass flags like
         <code>-fnew-abi</code> to the testsuite?</a>
@@ -417,6 +418,20 @@ or end of these variables is an implicit '.' and will cause problems.
 <a name="testsuite"></a>
 <h1>Testsuite problems</h1>
 
+<h2><a name="testsuite">Why is there no testsuite in gcc-2.95</a>
+<p>The GCC testsuite is not included in the gcc-2.95 release due to the
+uncertain copyright status of some tests.
+
+<p>The GCC team will be reviewing the entire testsuite to find and remove
+any tests with uncertain copyright status.  Once those tests are removed
+from the testsuite, the testsuite as a whole will be copyrighted under the
+terms of the GPL and included in future GCC releases.
+
+<p>It is believed that only a few tests have uncertain copyright status and
+thus only a few tests will need to be removed from the testsuite.
+
+
+<hr>
 <h2><a name="dejagnu">Unable to run the testsuite</a></h2>
 <p>If you get a message about unable to find "standard.exp" when trying to
 run the GCC testsuites, then your dejagnu is too old to run the GCC tests.
@@ -1129,7 +1144,7 @@ is declared pure-virtual [class.dtor]/7.
 <hr>
 
 <p><a href="index.html">Return to the EGCS home page</a>
-<p><i>Last modified:  July 14, 1999</i>
+<p><i>Last modified:  July 15, 1999</i>
 
 </body>
 </html>
