--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -139,9 +139,9 @@ project.
 <p>Overall control of the GCC project is in the hands of the 
 <a href="steering.html">GCC Steering Committee</a>
 which includes people from a variety of different organizations and backgrounds.
-The purpose of the steering committee is make decisions in the best interest of
-the GCC project and to help ensure that no individual or company has
-control over the project.
+The purpose of the steering committee is to make decisions in the best
+interest of the GCC project and to help ensure that no individual or
+company has control over the project.
 
 <p>To summarize, Cygnus contributes to the GCC project, but does not exert
 a controlling influence over the project.
@@ -293,9 +293,9 @@ available.
 
 <hr>
 <h2><a name="multiple">How to install both multiple versions of gcc</a></h2>
-<p>It may be desirable to install multiple versions of the compiler the same
-system.  This can be done by using different prefix paths at configure time
-and a few symlinks.
+<p>It may be desirable to install multiple versions of the compiler on
+the same system.  This can be done by using different prefix paths at
+configure time and a few symlinks.
 
 <p>Basically, configure the two compilers with different --prefix options,
 then build and install each compiler.  Assume you want "gcc" to be the latest
@@ -517,7 +517,7 @@ build).  Use them at your own risk.
 
 <hr>
 <h2><a name="asmclobber">Problems with invalid `asm' statements</a></h2>
-<p>Previous releases of gcc (for example, gcc-2.7.2. or egcs-1.1.2<i>X</i>)
+<p>Previous releases of GCC (for example, gcc-2.7.2. or egcs-1.1.2)
 did not
 detect as invalid a clobber specifier that clobbered an operand.
 Instead, it could spuriously and silently generate incorrect code for
