--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -517,7 +517,7 @@ build).  Use them at your own risk.
 
 <hr>
 <h2><a name="asmclobber">Problems with invalid `asm' statements</a></h2>
-<p>Previous releases of GCC (for example, gcc-2.7.2. or egcs-1.1.2)
+<p>Previous releases of GCC (for example, gcc-2.7.2 or egcs-1.1.2)
 did not
 detect as invalid a clobber specifier that clobbered an operand.
 Instead, it could spuriously and silently generate incorrect code for
