--- a/htdocs/install/download.html
+++ b/htdocs/install/download.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-<title>Downloading gcc</title>
+<title>Downloading GCC</title>
 </head>
 <body>
-<h1 align="center">Downloading gcc</h1>
+<h1 align="center">Downloading GCC</h1>
 
-<p>gcc is distributed via FTP tarballs compressed with gzip or bzip2.  It is
+<p>GCC is distributed via FTP tarballs compressed with gzip or bzip2.  It is
 possible to download a full distribution or specific components.
 
 <p>The full distribution includes the C, C++, Objective-C, Fortran, Java,
@@ -24,18 +24,15 @@ in the same directory.
 
 <p>XXX FSF mirror sites
 <p><a href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">
-FTP Download gcc
-from egcs.cygnus.com (USA California)</a>
-<p><a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/releases/inde
-x.html">
-FTP Download gcc from go.cygnus.com (USA California -- High speed link
+FTP download from egcs.cygnus.com (USA California)</a>
+<p><a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/releases/index.html">
+FTP download from go.cygnus.com (USA California -- High speed link
 provided by Stanford)</a>
-<p>The gcc release is available on many FTP mirror sites.<br>
-<a href="../mirrors.html"> Goto mirror list to find a closer site</a>
+<p>GCC releases are available on many <a href="../mirrors.html">FTP mirror sites</a>. If possible, please use one of these.
 
 <p>
 <hr>
-<i>Last modified on July 13, 1999.</i>
+<i>Last modified on July 16, 1999.</i>
 
 </body>
 </html>
