Change gcc to GCC resp. remove the name.

--- a/htdocs/install/index.html
+++ b/htdocs/install/index.html
@@ -1,17 +1,17 @@
 <html>
 <head>
-<title>Installing gcc</title>
+<title>Installing GCC</title>
 </head>
 <body>
-<h1 align="center">Installing gcc</h1>
+<h1 align="center">Installing GCC</h1>
 
 <p>The latest version of this document is always available at <a href="
 http://egcs.cygnus.com/install/">http://egcs.cygnus.com/install/</a>.
 
-<p>This document describes the generic installation procedure for gcc as
-well as detailing some target specific installation instructions for gcc.
+<p>This document describes the generic installation procedure for GCC as
+well as detailing some target specific installation instructions.
 
-<p>gcc includes several components that previously were separate distributions
+<p>GCC includes several components that previously were separate distributions
 with their own installation instructions.  This document supercedes all 
 package specific installation instructions.  We provide the component specific
 installation information in the source distribution for historical reference
@@ -19,7 +19,7 @@ purposes only.
 
 <p>We recommend you read the entire generic installation instructions as
 well as any target specific installation instructions before you proceed
-to configure, build, test and install gcc.
+to configure, build, test and install GCC.
 
 <p>If something goes wrong in the configure, build, test or install
 procedures, first double check that you followed the generic and target
@@ -27,8 +27,8 @@ specific installation instructions carefully.  Then check the
 <a href="../faq.html">FAQ</a> to see if your problem is covered before you file
 a bug report.
 
-<p><em>Before</em> starting the build/install procedure <em>please</em> browse the
-<a href="specific.html">host/target specific installation notes</a>.
+<p><em>Before</em> starting the build/install procedure <em>please</em> browse
+the <a href="specific.html">host/target specific installation notes</a>.
 
 <p>The installation procedure is broken into five steps.
 
@@ -43,7 +43,7 @@ a bug report.
 </ul>
 
 <hr>
-<a href="../index.html">Return to the gcc home page</a>
+<a href="../index.html">Return to the GCC home page</a>
 <hr>
 <i>Last modified on July 15, 1999.</i>
 </body>
