Make the title fit the new install/ scheme. Replace gcc by GCC or omit the name.

--- a/htdocs/install/configure.html
+++ b/htdocs/install/configure.html
@@ -1,21 +1,21 @@
 <html>
 <head>
-<title>Configuring gcc</title>
+<title>Installing GCC: Configuration</title>
 </head>
 <body>
-<h1 align="center">Configuring gcc</h1>
+<h1 align="center">Installing GCC: Configuration</h1>
 
-<p>Like most GNU software, gcc must be configured before it can be built.
+<p>Like most GNU software, GCC must be configured before it can be built.
 This document describes the recommended configuration procedure
 for both native and cross targets.
 
 <p>We use <i>srcdir</i> to refer to the toplevel source directory for
-gcc; we use <i>objdir</i> to refer to the toplevel build/object
-directory for gcc.
+GCC; we use <i>objdir</i> to refer to the toplevel build/object
+directory.
 
-<p>First, we <b>highly</b> recommend that gcc be built into a
+<p>First, we <b>highly</b> recommend that GCC be built into a
 separate directory than the sources which does <b>not</b> reside
-within the source tree.  This is how we generally build gcc; building
+within the source tree.  This is how we generally build GCC; building
 where <i>srcdir</i> == <i>objdir</i> should still work, but doesn't
 get extensive testing; building where <i>objdir</i> is a subdirectory
 of <i>srcdir</i> is unsupported.
@@ -24,7 +24,7 @@ of <i>srcdir</i> is unsupported.
 your path or you must set CC in your environment before running configure.
 Otherwise the configuration scripts may fail.
 
-<p>To configure gcc:
+<p>To configure GCC:
 
 <blockquote>
 <tt>
@@ -37,7 +37,7 @@ Otherwise the configuration scripts may fail.
 
 <p><b>target specification</b>
 <ul>
-  <li> gcc has code to correctly determine the correct value for
+  <li>GCC has code to correctly determine the correct value for
   <b>target</b> for nearly all native systems.  Therefore, we highly
   recommend you not provide a configure target when configuring a
   native compiler.
@@ -50,7 +50,7 @@ Otherwise the configuration scripts may fail.
 <p><b> options specification</b>
 
 <p>Use <b>options</b> to override several configure time options for
-gcc.  A partial list of supported <tt>options</tt>:
+GCC.  A partial list of supported <tt>options</tt>:
 
 <ul>
   <li> <tt>--prefix=</tt><i>dirname</i> -- Specify the toplevel installation
@@ -122,7 +122,7 @@ gcc.  A partial list of supported <tt>options</tt>:
 
   <li> <tt>--without-fast-fixincludes</tt> -- Specify that the old, slower
   method of fixing the system header files should be used. 
-  egcs-1.1.x and older releases default to the slow version gcc-2.95 and
+  egcs-1.1.x and older releases default to the slow version. GCC 2.95 and
   newer releases will default to the fast version.
 
   <li> <tt>--enable-version-specific-runtime-libs</tt> -- Specify that runtime
@@ -138,14 +138,14 @@ gcc.  A partial list of supported <tt>options</tt>:
   <li> <tt>--enable-languages=</tt><i>lang1</i><tt>,</tt><i>lang2</i><tt>,...</tt>
   -- Specify that only a particular subset of compilers and their runtime libraries
   should be built. For a list of valid values for <i>lang</i><tt>x</tt> you can issue
-  the following command in the <tt>gcc</tt> directory of your gcc source tree:<br>
+  the following command in the <tt>gcc</tt> directory of your GCC source tree:<br>
   <tt>
   grep language= */config-lang.in
   </tt><br>
   Currently, you can use any of the following: <tt>CHILL</tt>, <tt>c++</tt>,
   <tt>f77</tt>, <tt>java</tt> and <tt>objc</tt>. Please note, that this switch
   does not work with egcs-1.1.2 or older versions of egcs.  It will be supported
-  in gcc-2.95 and newer versions of gcc.<br>
+  in GCC 2.95 and newer version.<br>
   If you do not pass this flag, all languages available in the <tt>gcc</tt> sub-tree
   will be configured.  Re-defining LANGUAGES when calling <tt>make bootstrap</tt>
   <b>*does not*</b> work anymore, as those language sub-directories might not have been
@@ -175,7 +175,7 @@ that each <tt>--with</tt> option has a corresponding <tt>--without</tt> option.
 
 <p>
 <hr>
-<i>Last modified on July 15, 1999.</i>
+<i>Last modified on July 16, 1999.</i>
 
 </body>
 </html>
