Add an omitted HTML tag and an omitted word. By Martin Reinecke <martin@MPA-Garching.MPG.DE>

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -418,7 +418,7 @@ or end of these variables is an implicit '.' and will cause problems.
 <a name="testsuite"></a>
 <h1>Testsuite problems</h1>
 
-<h2><a name="testsuite">Why is there no testsuite in gcc-2.95</a>
+<h2><a name="testsuite">Why is there no testsuite in gcc-2.95</a></h2>
 <p>The GCC testsuite is not included in the gcc-2.95 release due to the
 uncertain copyright status of some tests.
 
@@ -610,7 +610,7 @@ ANSI/ISO standard. Starting with gcc-2.95, the gcc optimizer
 by default relies on these rules to produce more efficient code and thus
 will produce malfunctioning kernels.
 To work around this problem, the flag <CODE>-fno-strict-aliasing</CODE>
-must be added to the <CODE>CFLAGS</CODE> variable in main kernel Makefile.
+must be added to the <CODE>CFLAGS</CODE> variable in the main kernel Makefile.
 
 <p>If you try to build a 2.0.x kernel for Intel machines with any compiler
 other than gcc-2.7.2, then you are on your own.
