Make the title fit the new install/ scheme. Replace gcc by GCC. Replace gnu-make by GNU make. Add structure by using appropriate heading tags instead of physical markup.

--- a/htdocs/install/build.html
+++ b/htdocs/install/build.html
@@ -1,26 +1,27 @@
 <html>
 <head>
-<title>Building gcc</title>
+<title>Installing GCC: Building</title>
 </head>
 <body>
-<h1 align="center">Building gcc</h1>
+<h1 align="center">Installing GCC: Building</h1>
 
-<p>Now that gcc is configured, you are ready to build the compiler and
+<p>Now that GCC is configured, you are ready to build the compiler and
 runtime libraries.
 
-<p>We <b>highly</b> recommend that gcc be built using gnu-make; other
-versions may work, then again they might not.  To be safe build with gnu-make.
+<p>We <b>highly</b> recommend that GCC be built using GNU make; other
+versions may work, then again they might not.  To be safe build with GNU make.
 
-<p><b>Building a native compiler</b>
+<h2>Building a native compiler</h2>
+
 <p>For a native build issue the command `<code>make bootstrap</code>'.  This 
-will build the entire gcc compiler system, which includes the following steps:
+will build the entire GCC system, which includes the following steps:
 
 <ul>
   <li> Build host tools necessary to build the compiler such as texinfo, bison,
   gperf.<p>
 
   <li> Build target tools for use by the compiler such as gas, gld, and
-  binutils if they have been properly unpacked into the gcc source tree.<p>
+  binutils if they have been properly unpacked into the GCC source tree.<p>
 
   <li> Perform a 3-stage bootstrap of the compiler.<p>
 
@@ -50,7 +51,7 @@ which the particular compiler has been built.  Please note,
 that re-defining LANGUAGES when calling `<code>make bootstrap</code>'
 <b>*does not*</b> work anymore!
 
-<p><b>Building a cross compiler</b>
+<h2>Building a cross compiler</h2>
 
 <p> We recommend reading the
 <a href="http://www.objsw.com/CrossGCC/">
@@ -72,7 +73,7 @@ following steps:
   gperf.<p>
 
   <li> Build target tools for use by the compiler such as gas, gld, and
-  binutils if they have been properly unpacked into the gcc source tree.<p>
+  binutils if they have been properly unpacked into the GCC source tree.<p>
 
   <li> Build the compiler (single stage only).<p>
 
@@ -82,17 +83,17 @@ following steps:
 
 <p>Note that if an error occurs in any step the make process will exit.
 
-<p><b>Building in parallel</b>
+<h2>Building in parallel</h2>
 
 <p> If you have a multiprocessor you can use `<code>make bootstrap
 MAKE="make -j 2" -j 2</code>' instead of just `<code>make bootstrap</code>'
-when building gcc.  You can use a bigger number instead of two if
+when building GCC.  You can use a bigger number instead of two if
 you like.  In most cases, it won't help to use a number bigger than
 the number of processors in your machine.
 
 <p>
 <hr>
-<i>Last modified on July 15, 1999.</i>
+<i>Last modified on July 16, 1999.</i>
 
 </body>
 </html>
