--- a/htdocs/install/finalinstall.html
+++ b/htdocs/install/finalinstall.html
@@ -1,18 +1,18 @@
 <html>
 <head>
-<title>Final install gcc</title>
+<title>Installing GCC: Final installation</title>
 </head>
 <body>
-<h1 align="center">Final install gcc</h1>
+<h1 align="center">Installing GCC: Final installation</h1>
 
-<p>Now that gcc has been built and tested, you can install it with
+<p>Now that GCC has been built and tested, you can install it with
 `<code>cd <i>objdir</i>; make install</code>' for a native compiler or
 `<code>cd <i>objdir</i>; make install LANGUAGES="c c++"</code>' for 
 a cross compiler (note installing cross compilers will be easier in the 
 next release!).
 
 
-<p>That step completes the installation of gcc; user level binaries can
+<p>That step completes the installation of GCC; user level binaries can
 be found in <i>prefix</i>/bin where <i>prefix</i> is the value you specified
 with the --prefix to configure (or /usr/local by default).
 
@@ -20,18 +20,18 @@ with the --prefix to configure (or /usr/local by default).
 href="http://egcs.cygnus.com/gcc-2.95/buildstat.html">build status page</a>.
 If your system is not listed, send a note to
 <a href="mailto:egcs@egcs.cygnus.com">egcs@egcs.cygnus.com</a> indicating
-that you successfully built and installed gcc.
+that you successfully built and installed GCC.
 
 Include the output from running <i>srcdir</i>/config.guess.  (Do not
 send us the config.guess file itself, just the output from running
 it!)
 
-<p>If you find a bug in gcc, please report it to
-<a href="mailto:egcs-bugs@egcs.cygnus.com">egcs-bugs@egcs.cygnus.com</a>.
+<p>If you find a bug, please report it following our <a
+href="../faq.html#bugreport">bug reporting guidlines</a>.
 
 <p>
 <hr>
-<i>Last modified on July 15, 1999.</i>
+<i>Last modified on July 16, 1999.</i>
 
 </body>
 </html>
