Replace "egcs" by "GCC". Move the links to the Steering Committee and Commit Policies/Procedures a bit. Align the main part of the page at the top.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>egcs project home page</title>
+<title>GCC Project Home Page</title>
 </head>
 
 <body bgcolor="white" text="black" link="#0000EE" vlink="#551A8B" alink="red">
@@ -10,11 +10,11 @@
 <TD VALIGN="TOP" WIDTH="8%" BGCOLOR="#FFFFBB">
 <H2>About</H2>
 <P>
-<A HREF="steering.html">Steering Committee</A><BR>
 <A HREF="gccmission.html">Mission Statement</A><BR>
 <A HREF="lists.html">Mailing lists</A><BR>
 <A HREF="timeline.html">Timeline</A><BR>
 <A HREF="thanks.html">Contributors</A><BR>
+<A HREF="steering.html">Steering Committee</A><BR>
 </P>
 <H2>Docs</H2>
 <P>
@@ -30,7 +30,7 @@
 <A HREF="egcstensions.html">Egcstensions</A><BR>
 <A HREF="cvs.html">CVS read access</A><BR>
 <A HREF="cvswrite.html">CVS write access</A><BR>
-<A HREF="checkin.html">Commit Policies/Procedures </A>
+<A HREF="checkin.html">Policies/Procedures</A>
 </P>
 <H2>Bugs</H2>
 <P>
@@ -45,10 +45,11 @@
 </P>
 </TD>
 
-<TD BGCOLOR="white">
+<TD BGCOLOR="white" VALIGN="top">
+
 <img src="logo.jpg" alt="" align="right">
 
-<h2>Welcome to the egcs project!</h2>
+<h2>Welcome to the GCC project!</h2>
 
 In April 1999, the egcs steering committee was appointed by the FSF
 as the official GNU maintainer for GCC.  At that time GCC was renamed
@@ -59,8 +60,8 @@ from the "GNU C Compiler" to the "GNU Compiler Collection".
 reflects the fundamental goals of the egcs project.
 
 <p>We want to work closely with contributors to help and encourage
-them to submit their changes for inclusion in egcs.  The egcs project
-provides access to its <a href="#development_sources">development sources</a>
+them to submit their changes for inclusion in GCC.  We thus provide
+access to our <a href="#development_sources">development sources</a>
 with weekly snapshots and anonymous CVS.  All code continues to be <a
 href="contribute.html">assigned to the FSF</a> exactly as before.</p>
 
@@ -119,7 +120,7 @@ back end, focusing on better optimization for the Pentium II.
 <address>
 <a href="about.html">The GCC team</a>
 <br>
-<small><i>Last modified on July 13, 1999.</i></small>
+<small><i>Last modified on July 15, 1999.</i></small>
 </address>
 
 </body>
