Change "egcs" to "GCC". Remove explicit references to the mailing lists. Remove obsolete TODO items.

--- a/htdocs/web.html
+++ b/htdocs/web.html
@@ -1,10 +1,11 @@
 <html>
 <head>
-<title>Our web pages</title>
+<title>GCC: Web Pages</title>
 </head>
 
 <body bgcolor="white" text="black" link="#0000EE" vlink="#551A8B" alink="red">
-<h1 align="center">Our web pages</h1>
+
+<h1 align="center">GCC: Web Pages</h1>
 
 <h2>TODO</h2>
 
@@ -15,7 +16,6 @@ of being implemented soon. ;-)</p>
 <ul>
 <li>Complete MetaHTML machinery on the egcs machine and convert all
     pages to some common style. [Gerald]
-<li>Provide better navigation (navigation bar?). [Gerald]
 <li>Move system specific installation notes from faq.html to
     install/specific.html. [Bret McGuire]
 <li>Move extra pages corresponding to technical news items into a
@@ -26,20 +26,15 @@ of being implemented soon. ;-)</p>
     non-insiders. [Marc Lehmann]
 <li>Write down some information concerning the testsuite.
     This might be combined with the previous item. [Marc Lehmann]
-<li>Switch the search engine to htdig as part of the egcs/fsf merger (jsm
-    has already started this and we'll probably be able to remove it from
-    the TODO list in the near future).
 <li>Investigate faq-o-matic to supplement (or possibly replace) the FAQ we
     are currently maintaining.
 </ul>
 
 <address>
-<a href="about.html">The egcs team</a>
+<a href="about.html">The GCC team</a>
 <br>
-<small><i>Last modified on May  5, 1999.</i></small>
+<small><i>Last modified on July 16, 1999.</i></small>
 </address>
 
 </body>
 </html>
-
-
