--- a/htdocs/about.html
+++ b/htdocs/about.html
@@ -1,26 +1,23 @@
 <html>
 <head>
-<title>egcs project: about</title>
+<title>GCC: About</title>
 </head>
 
 <body bgcolor="white" text="black" link="#0000EE" vlink="#551A8B" alink="red">
 
-<h1 align="center">egcs project: about</h1>
+<h1 align="center">GCC: About</h1>
 
-<p>These pages are maintained by the egcs team, which consists of
+<p>These pages are maintained by the GCC team, which consists of
 numerous <a href="thanks.html">volunteers and contributors</a>. The
 web effort is coordinated by Jeff Law and Gerald Pfeifer, but again,
 there are <em>lots</em> of people who contribute.</p>
 </p>
 
 <p>Please send feedback, problem reports and patches to our
-<a href="lists.html">mailing lists</a>, i.e.,
-  <code>egcs@egcs.cygnus.com</code>,
-  <code>egcs-bugs@egcs.cygnus.com</code>, and
-  <code>egcs-patches@egcs.cygnus.com</code>.
+<a href="lists.html">mailing lists</a>.
 </p>
 
-<p>Like the egcs sources themselves, the web pages are under
+<p>Like the GCC sources themselves, the web pages are under
 <a href="cvs.html">CVS control</a>. Changes to the CVS repository
 immediately propagate to the web server and you can easily track any
 changes or contribute some of your own.
@@ -30,9 +27,9 @@ changes or contribute some of your own.
 </p>
 
 <address>
-<a href="about.html">The egcs team</a>
+<a href="about.html">The GCC team</a>
 <br>
-<small><i>Last modified on May  5, 1999.</i></small>
+<small><i>Last modified on July 16, 1999.</i></small>
 </address>
 
 </body>
