Wrote checkin/gnats rules

--- a/htdocs/java/contribute.html
+++ b/htdocs/java/contribute.html
@@ -65,4 +65,27 @@
 	href="mailto:java-patches@sourceware.cygnus.com">the patch mailing
 	list</a>.  This list is <a href="/ml/java-patches/">archived</a>.
 
+<h2>Checkins and Gnats</h2>
+
+    <p>If you have direct checkin access for libgcj, please make sure
+    that your checkins follow the standard checkin rules.
+
+    <p>First, always make ChangeLog entries.  This is not negotiable;
+      a checkin without a ChangeLog entry will be reverted.  If the
+      checkin fixes a bug in Gnats, note this in the entry.
+
+    <p>The commit message given to cvs should be the ChangeLog entry.
+      If you wrote the entry (your name is at the top), then don't
+      include the header.  If someone else wrote the entry, do include
+      the header.
+
+    <p>After checking in a fix which fixes a PR, put the PR into
+      ``feedback'' mode.  This will send email to the bug's
+      originator.  In the change message ask them to try the fix and
+      report back.
+
+    <p>Once the originator reports back, or after some suitable amount
+      of time (less time if you are absolutely sure, beyond any shadow
+      of a doube, that the bug has been fixed) close the PR.
+
 <!--#include virtual="/include/footer-subpages.html"-->
