Updates for the list conversion.

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -1,65 +1,59 @@
 <html>
 <head>
-<title>egcs project mailing lists</title>
+<title>GCC project mailing lists</title>
 </head>
 <body>
-<h1 align="center">egcs project mailing lists</h1>
+<h1 align="center">GCC project mailing lists</h1>
 
 
-<p>We have moved all mailing list functions from the Cygnus mailserver to the
-egcs machine. If you have problems sending mail to egcs.cygnus.com, note that
+If you have problems sending mail to the GCC project's mailing lists, note that
 we block spam sites and open mail relays by subscribing to
 <a href="http://maps.vix.com/rbl/">MAPS
 RBL</a> and <a href="http://www.orbs.org/">ORBS</a>. Please do not
 complain to us, but ask your server admin to fix his setup.
-
-<p>The conversion to egcs.cygnus.com has three key benefits:
-<ol>  
-  <li> The delay between the time a message is posted to a
-  list and the time it arrives at its final destination should be significantly
-  reduced.
-  <li> We will be able to put in anti-spam filters on our lists without
-  affecting Cygnus's mailserver (see above).
-  <li> More of the list functions will be automated.
-</ol>
 
 <p>Please read the subscribe/unsubscribe instructions carefully.  They 
 may have changed since you last visited this page.
 
 
 <ul>
-  <li><b><a href="http://egcs.cygnus.com/ml/egcs-announce/">egcs-announce</a></b>
+  <li><b><a href="http://egcs.cygnus.com/ml/gcc-announce/">gcc-announce</a></b>
   is a read-only low volume list where
   we post announcements about releases or other important events.
 
-  <li><b><a href="http://egcs.cygnus.com/ml/egcs/">egcs</a></b>
-  is a high volume list for general discussions about egcs.  Anything not
-  covered by other mailing lists is suitable for discussion on <b>egcs</b>.
+  <li><b><a href="http://egcs.cygnus.com/ml/gcc/">gcc</a></b>
+  is a high volume list for general development discussions about gcc.
+  Anything not
+  covered by other mailing lists is suitable for discussion on <b>gcc</b>.
 
-  <li><b><a href="http://egcs.cygnus.com/ml/egcs-bugs/">egcs-bugs</a></b>
+  <li><b><a href="http://egcs.cygnus.com/ml/gcc-help/">gcc-help</a></b>
+  is a relatively high volume list for people searching for help in building
+  gcc.
+
+  <li><b><a href="http://egcs.cygnus.com/ml/gcc-bugs/">gcc-bugs</a></b>
   is a relatively high volume list for bug reports and general discussion
-  about bugs in egcs.
+  about bugs in gcc.
 
-  <li><b><a href="http://egcs.cygnus.com/ml/egcs-patches/">egcs-patches</a></b>
+  <li><b><a href="http://egcs.cygnus.com/ml/gcc-patches/">gcc-patches</a></b>
   is a relatively high volume list for patch submissions and discussion of
   particular patches.  All patch submissions and all discussion for a
-  particular patch should be sent to <b>egcs-patches</b>.
+  particular patch should be sent to <b>gcc-patches</b>.
 
-  <li><b><a href="http://egcs.cygnus.com/ml/egcs-cvs/">egcs-cvs</a></b>
+  <li><b><a href="http://egcs.cygnus.com/ml/gcc-cvs/">gcc-cvs</a></b>
   is a read-only, relatively high volume list which tracks checkins to the
-  egcs CVS repository.
+  gcc CVS repository.
 
-  <li><b><a href="http://egcs.cygnus.com/ml/egcs-cvs-wwwdocs/">egcs-cvs-wwwdocs</a></b>
+  <li><b><a href="http://egcs.cygnus.com/ml/gcc-cvs-wwwdocs/">gcc-cvs-wwwdocs</a></b>
   is a read-only, relatively low volume list which tracks checkins to
-  the egcs webpages CVS repository.
+  the gcc webpages CVS repository.
 
-  <li><b><a href="http://egcs.cygnus.com/ml/egcs-testresults/">
-  egcs-testresults</a></b> is a moderate volume list where test results for
-  the egcs compilers are posted.
+  <li><b><a href="http://egcs.cygnus.com/ml/gcc-testresults/">
+  gcc-testresults</a></b> is a moderate volume list where test results for
+  the gcc compilers are posted.
 </ul>
 
 <p>To post a message, just send mail to
-<i>listname</i><tt>@egcs.cygnus.com</tt>.
+<i>listname</i><tt>@gcc.gnu.org</tt>.
 
 
 <a name="msgsize"><h2>Policies</h2></a>
@@ -77,17 +71,18 @@ and try to avoid cross posting a message to several lists.
 <h2>Archives</h2>
 
 <p>Web archives for all mailing lists are on-line
-(<a href="http://egcs.cygnus.com/ml/egcs-announce/">egcs-announce</a>,
-<a href="http://egcs.cygnus.com/ml/egcs/">egcs</a>,
-<a href="http://egcs.cygnus.com/ml/egcs-bugs/">egcs-bugs</a>,
-<a href="http://egcs.cygnus.com/ml/egcs-patches/">egcs-patches</a>,
-<a href="http://egcs.cygnus.com/ml/egcs-cvs/">egcs-cvs</a>,
-<a href="http://egcs.cygnus.com/ml/egcs-cvs-wwwdocs/">egcs-cvs-wwwdocs</a>, and
-<a href="http://egcs.cygnus.com/ml/egcs-testresults/">egcs-testresults</a>),
-plus you can also <a href="ftp://egcs.cygnus.com/pub/egcs/mail-archives/">
+(<a href="http://egcs.cygnus.com/ml/gcc-announce/">gcc-announce</a>,
+<a href="http://egcs.cygnus.com/ml/gcc/">gcc</a>,
+<a href="http://egcs.cygnus.com/ml/gcc-bugs/">gcc-bugs</a>,
+<a href="http://egcs.cygnus.com/ml/gcc-help/">gcc-help</a>,
+<a href="http://egcs.cygnus.com/ml/gcc-patches/">gcc-patches</a>,
+<a href="http://egcs.cygnus.com/ml/gcc-cvs/">gcc-cvs</a>,
+<a href="http://egcs.cygnus.com/ml/gcc-cvs-wwwdocs/">gcc-cvs-wwwdocs</a>, and
+<a href="http://egcs.cygnus.com/ml/gcc-testresults/">gcc-testresults</a>),
+plus you can also <a href="ftp://egcs.cygnus.com/pub/gcc/mail-archives/">
 download mbox formatted archives of each mailing list</a>.
 
-<p>A <a href="http://bitrange.com/egcs/search.html">search engine</a>
+<p>A <a href="http://bitrange.com/gcc/search.html">search engine</a>
 for the web archives is currently hosted at
 <a href="http://bitrange.com/">BitRange.com</a>. If you have comments about
 the search function, send a copy to
@@ -97,30 +92,30 @@ the search function, send a copy to
 <h2>Subscription</h2>
 
 <p>To subscribe to a list, send a blank mail to
-<code><i>listname</i>-subscribe@egcs.cygnus.com</code>
+<code><i>listname</i>-subscribe@gcc.gnu.org</code>
 
 <p>To unsubscribe, send a blank mail to 
-<code><i>listname</i>-unsubscribe@egcs.cygnus.com</code>
+<code><i>listname</i>-unsubscribe@gcc.gnu.org</code>
 
 <p>Each list also has a digest, which you can subscribe to by sending mail
 to
-<code><i>listname</i>-digest-subscribe@egcs.cygnus.com</code>
+<code><i>listname</i>-digest-subscribe@gcc.gnu.org</code>
 
 
 <h2>Help</h2>
 
 <p>For further information on using the lists, send a blank mail to
-<code><i>listname</i>-help@egcs.cygnus.com</code>.</p>
+<code><i>listname</i>-help@gcc.gnu.org</code>.</p>
 
 <p>As a <em>last</em> resort, for example if you want to unsubscribe
 while your mail server is listed by ORBS, contact <a
 href="mailto:law@cygnus.com">law@cygnus.com</a>.</p>
 
 <hr>
-<p><a href="index.html">Return to the egcs home page</a>
+<p><a href="index.html">Return to the gcc home page</a>
 
 <hr>
-<p><i>Last modified:  May  4, 1999</i>
+<p><i>Last modified:  July  17, 1999</i>
 
 </body>
 </html>
