Some clarification concerning egcs vs GCC. By Joe Buck <jbuck@Synopsys.COM>

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -51,13 +51,17 @@
 
 <h2>Welcome to the GCC project!</h2>
 
-In April 1999, the egcs steering committee was appointed by the FSF
+<p>If you were looking for the EGCS project, you found the right place;
+GCC development is now reunited and the former egcs team is now
+responsible for GCC releases.
+
+<p>In April 1999, the egcs steering committee was appointed by the FSF
 as the official GNU maintainer for GCC.  At that time GCC was renamed
 from the "GNU C Compiler" to the "GNU Compiler Collection".
 
 <p>As a result of those changes the project has a new
 <a href="gccmission.html">mission statement</a> which more accurately
-reflects the fundamental goals of the egcs project.
+reflects the fundamental goals of the project.
 
 <p>We want to work closely with contributors to help and encourage
 them to submit their changes for inclusion in GCC.  We thus provide
@@ -120,7 +124,7 @@ back end, focusing on better optimization for the Pentium II.
 <address>
 <a href="about.html">The GCC team</a>
 <br>
-<small><i>Last modified on July 15, 1999.</i></small>
+<small><i>Last modified on July 17, 1999.</i></small>
 </address>
 
 </body>
