egcs-blah@egcs.cygnus.com -> gcc-blah@gcc.gnu.org changes

--- a/htdocs/announcement.html
+++ b/htdocs/announcement.html
@@ -79,7 +79,7 @@ The egcs mailing list at cygnus.com will be used to discuss and
 prioritize these features.
 
 How to join: send mail to <a
-href="mailto:egcs-subscribe@egcs.cygnus.com">egcs-request at cygnus.com</a>.
+href="mailto:gcc-subscribe@gcc.gnu.org">egcs-request at cygnus.com</a>.
 That list is under majordomo.
 
 We have a web page that describes the various mailing lists and has
