--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -87,8 +87,8 @@ contributions must meet.</p>
 
   <p>When you have all these pieces, bundle them up in a mail message and
   send it to
-  <a href="mailto:egcs-patches@egcs.cygnus.com">egcs-patches@egcs.cygnus.com</a>.
-  All patches and related discussion should be sent to the egcs-patches
+  <a href="mailto:gcc-patches@gcc.gnu.org">gcc-patches@gcc.gnu.org</a>.
+  All patches and related discussion should be sent to the gcc-patches
   mailinglist.
 
 <hr>
