--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -212,7 +212,7 @@ to the current release first.
 <p>In short, if gcc says <tt>Internal compiler error</tt> (or any
 other error that you'd like us to be able to reproduce, for that
 matter), please mail a bug report to <a
-href="mailto:egcs-bugs@egcs.cygnus.com">egcs-bugs@egcs.cygnus.com</a> including:
+href="mailto:gcc-bugs@gcc.gnu.org">gcc-bugs@gcc.gnu.org</a> including:
 
 <ul>
   <li>The gcc version
