--- a/htdocs/install/finalinstall.html
+++ b/htdocs/install/finalinstall.html
@@ -19,7 +19,7 @@ with the --prefix to configure (or /usr/local by default).
 <p>If you don't mind, please quickly review the <a
 href="http://egcs.cygnus.com/gcc-2.95/buildstat.html">build status page</a>.
 If your system is not listed, send a note to
-<a href="mailto:egcs@egcs.cygnus.com">egcs@egcs.cygnus.com</a> indicating
+<a href="mailto:gcc@gcc.gnu.org">gcc@gcc.gnu.org</a> indicating
 that you successfully built and installed GCC.
 
 Include the output from running <i>srcdir</i>/config.guess.  (Do not
