--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -92,7 +92,7 @@ of the snapshots are mirrored here.
 </UL>
 
 <p>If you wish to host a new mirror site, please contact
-<a href="mailto:egcs@egcs.cygnus.com">egcs@egcs.cygnus.com</a>.  Include the
+<a href="mailto:gcc@gcc.gnu.org">gcc@gcc.gnu.org</a>.  Include the
 name of the ftp server, the path to the egcs mirror and the country/city
 where the mirror is located.
 
