More egcs-blah -> gcc-blah conversions.

--- a/htdocs/checkin.html
+++ b/htdocs/checkin.html
@@ -80,7 +80,7 @@ editor window to appear and enter the log message in the editor window.
 
 <p>After exiting the editor, CVS will connect to the egcs cvs server and
 check in your changes.  When your prompt returns the checkin is finished.
-A message will be sent to the "<tt>egcs-cvs</tt>" mailing list (when
+A message will be sent to the "<tt>gcc-cvs</tt>" mailing list (when
 set up) indicating that a change was made.  CVS will provide a message
 if an error occurs and it will not check in any files.
 
