--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -257,12 +257,12 @@ disadvantages.
     individuals providing support for GCC.  This alternative costs
     money, but is relatively likely to get results.
 
-<li>Report the problem to egcs-bugs and hope that someone will be kind
+<li>Report the problem to gcc-bugs and hope that someone will be kind
     enough to fix it for you.  While this is certainly possible, and
     often happens, there is no guarantee that it will.  You should
-    not expect the same response from egcs-bugs that you would see
+    not expect the same response from gcc-bugs that you would see
     from a commercial support organization since the people who read
-    egcs-bugs, if they choose to help you, will be volunteering their
+    gcc-bugs, if they choose to help you, will be volunteering their
     time.  This alternative will work best if you follow the directions
     on <a href="#bugreport">submitting bugreports</a>.
 
