--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -76,7 +76,7 @@ Jason Merrill.
 <dt><b>April 13, 1999</b></dt>
 <dd>
 We have set up a new <a href="lists.html">mailing list</a>
-<a href="http://egcs.cygnus.com/ml/egcs-cvs-wwwdocs/">egcs-cvs-wwwdocs</a>
+<a href="http://egcs.cygnus.com/ml/gcc-cvs-wwwdocs/">gcc-cvs-wwwdocs</a>
 that tracks checkins to the egcs webpages CVS repository.
 </dd>
 
@@ -260,10 +260,10 @@ framework</b></a>.
 <dt><b>May 26, 1998</b></dt>
 <dd>
   We have added two new mailing lists for the egcs project.
-  <b>egcs-cvs</b> and <b>egcs-patches</b>.
+  <b>gcc-cvs</b> and <b>egcs-patches</b>.
 
   <p>When a patch is checked into the CVS repository, a check-in notification
-  message is automatically sent to the <b>egcs-cvs</b> mailing list.  This will
+  message is automatically sent to the <b>gcc-cvs</b> mailing list.  This will
   allow developers to monitor changes as they are made.
 
   <p>Patch submissions should be sent to <b>egcs-patches</b> instead of the
