more details for bug reporting

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -230,17 +230,46 @@ or `<tt><i>your-file</i>.ii</tt>' for C++, corresponding to:
 
 <p><tt>gcc -v --save-temps <i>all-your-options</i> <i>your-file</i>.c</tt>
 
-<p>Typically the CPP output will be large, so please compress the resulting
-file with one of the popular compression programs such as <tt>gzip</tt>,
-<tt>bzip2</tt>, <tt>compress</tt> or <tt>pkzip</tt>, then include the
-compressed CPP output as an attachment to your message.
+<p>Typically the CPP output (extension <code>.i</code> for C or
+<code>.ii</code> for C++) will be large, so please compress the
+resulting file with one of the popular compression programs such as
+<tt>bzip2</tt>, <tt>gzip</tt>, <tt>zip</tt>, <tt>pkzip</tt> or
+<tt>compress</tt> (in decreasing order of preference).  Use maximum
+compression (<code>-9</code>) if available.  Please include the
+compressed CPP output in your bug report.
+
+<p>Since we're supposed to be able to re-create the assembly output
+(extension <code>.s</code>), you usually don't have to include it in
+the bug report, although you may want to post parts of it to point out
+assembly code you consider to be wrong.
+
+<p>Whether to use MIME attachments or <code>uuencode</code> is up to
+you.  In any case, make sure the compiler command line, version and
+error output are in plain text, so that we don't have to decode the
+bug report in order to tell who should take care of it.  A meaningful
+subject indicating language and platform also helps.
 
 <p>The gcc lists have message size limits (100 kbytes) and bug reports
 over those limits will currently be bounced.  We're trying to find a
 way to allow larger bug reports to be posted, but this is currently
-impossible.  So, although we prefer to have complete bug reports
-archived, if you cannot reduce the bug report below the limit, please
-make it available for ftp or http and post the URL.
+impossible (unless you use MIME partials, which most people are unable
+to handle anyway, so you'd better avoid them for now).  So, although
+we prefer to have complete bug reports archived, if you cannot reduce
+the bug report below the limit, please make it available for ftp or
+http and post the URL.  Another alternative is to break the
+preprocessed output in multiple files (using <code>split</code>, for
+example) and post them in separate messages, but we prefer to have
+self-contained bug reports in single messages.
+
+<p>If you fail to supply enough information for a bug report to be
+reproduced, someone will probably ask you to post additional
+information (or just ignore your bug report, if they're in a bad day,
+so try to get it right on the first posting :-).  In this case, please
+post the additional information to the bug reporting mailing list, not
+just to the person who requested it, unless explicitly told so.  If
+possible, please include in this follow-up all the information you had
+supplied in the incomplete bug report (including the preprocessor
+output), so that the new bug report is self-contained.
 
 <hr>
 <h2><a name="support">How do I get a bug fixed or a feature added?</a></h2>
@@ -292,7 +321,7 @@ binutils or to Red Hat 5.0; we'll provide more information as it becomes
 available.                                                               
 
 <hr>
-<h2><a name="multiple">How to install both multiple versions of gcc</a></h2>
+<h2><a name="multiple">How to install multiple versions of gcc</a></h2>
 <p>It may be desirable to install multiple versions of the compiler on
 the same system.  This can be done by using different prefix paths at
 configure time and a few symlinks.
@@ -1144,7 +1173,7 @@ is declared pure-virtual [class.dtor]/7.
 <hr>
 
 <p><a href="index.html">Return to the EGCS home page</a>
-<p><i>Last modified:  July 15, 1999</i>
+<p><i>Last modified:  July 17, 1999</i>
 
 </body>
 </html>
