--- a/htdocs/gcc-2.95/caveats.html
+++ b/htdocs/gcc-2.95/caveats.html
@@ -24,7 +24,7 @@
   64bit targets.  Instead of silently generating incorrect code, gcc-2.95
   will issue a fatal error for situations it can not handle.
 
-  This primarly effects the Fortran community as Fortran makes more use of
+  This primarily affects the Fortran community as Fortran makes more use of
   complex variables than C or C++.
 
   <li>gcc-2.95 has an integrated libstdc++, but does not have an integrated
@@ -57,7 +57,7 @@
 </ul>
 
 <p><a href="../index.html">Return to the egcs home page</a>
-<p><i>Last modified:  July 13, 1999</i>
+<p><i>Last modified:  July 25, 1999</i>
 
 </body>
 </html>
